# system

./: .gitattributes  .gitignore  LICENSE  README.md  TODO.md  __system__.py  __task__.py  __tasklib__.py  pyproject.toml  task
browsers/: __task__.py
comms/: __task__.py
containers/: __task__.py
dev/: __task__.py
dotnet/: __task__.py
dropbox/: __task__.py
files/linux/: set-fan-curves-ipmi.sh
games/: __task__.py
gitkraken/: __task__.py
linux/: docker.sh
macos/: docker.sh  install.sh
os/: __task__.py
scripts/linux/: snap-window.py
shell/: __task__.py
utils/: __task__.py
vim/: __task__.py  alacritty.toml  readme.md  tmux.conf
vim/nvim/: init.lua  lazy-lock.json
vim/nvim/lua/: vim-options.lua
vim/nvim/lua/plugins/: base64.lua  completions.lua  lsp-config.lua  lualine.lua  neotree.lua  none-ls.lua  telescope.lua  vim-test.lua
vim/tmuxifier/layouts/: layouts  main.session.sh  python-version.window.sh  taask.session.sh
vm/: __task__.py  netplan-public-bridge-setup.sh
vscode/: __task__.py
